projet-pma/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projet-pma
  labels:
    app.kubernetes.io/part-of: projet-pma
