projet-pma/06-phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: projet-pma
  labels: { app: phpmyadmin, tier: frontend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: phpmyadmin }
  template:
    metadata:
      labels: { app: phpmyadmin, tier: frontend }
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 30
            periodSeconds: 20
