projet-pma/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: projet-pma
  labels: { app: mysql, tier: db }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector:
    matchLabels: { app: mysql }
  template:
    metadata:
      labels: { app: mysql, tier: db }
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec: { command: ["sh", "-c", "mysqladmin ping -h 127.0.0.1"] }
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 3306 }
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-data
