projet-pma/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: projet-pma
  labels: { app: mysql, tier: db }
spec:
  selector: { app: mysql }
  ports:
    - port: 3306
      targetPort: 3306
