projet-pma/07-phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: projet-pma
  labels: { app: phpmyadmin, tier: frontend }
spec:
  type: NodePort
  selector: { app: phpmyadmin }
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
